identity/deploy/accounts-app/accounts-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounts-app
  namespace: project-starter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounts-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: accounts-app
    spec:
      containers:
      - name: accounts-app
        image: eu.gcr.io/the-mesh-254617/ps-identity-accounts-app-entrypoint:bca406a-1631689013403 # {"$imagepolicy": "flux-system:project-starter-accounts-app"}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
