identity/deploy/accounts-app/accounts-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: accounts-app
  namespace: project-starter
  labels:
    app: accounts-app
spec:
  ports:
    - name: http
      port: 3000
      targetPort: http
  selector:
    app: accounts-app
