identity/deploy/accounts-app/accounts-app-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: accounts-app
  namespace: project-starter
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: project-starter-accounts-app-tls
      hosts:
        - 'accounts.ps.atls.tech'
